--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.mvc.static-path-pattern=/static/**
